fix: update spinner size and color in home.css; increment version to v1.0.2 in mfgApp.js

--- a/css/home.css
+++ b/css/home.css
@@ -23,11 +23,11 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box;  box-sizing:
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 50px;
-  height: 50px;
+  width: 89px;
+  height: 89px;
   margin: -25px 0 0 -25px;
   border: 5px solid rgba(0, 0, 0, 0.1);
-  border-top: 5px solid #000;
+  border-top: 5px solid #0071c5;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
